 4. Add option to auto-scroll lyrics - accessed via context-menu in lyrics view.
 5. Use smaller font for sizebar.
 6. Remove corner cover widget.
 7. Remove collapsing of interface.
 8. Move position slider inbetween controls.
 9. If volume control is disabled (as MPD returns negative volume), then make
    control semi-transparent, and don't just hide.
10. Use system libebur128 if found.

1.3.1
-----
1. Fix collapsed context-view selector buttons text when using a dark
   background.
2. Apply some Fedora patches.
3. Fix MPD HTTP stream playback.
4. Fix painting of Gtk thin scrollbar style on comboboxes.
5. When waiting for replies from MPD, use Qt's standard timeout value of 30s.
   While the socket is still connected, Cantata will wait up to 4 times the
   timeout value. Therefore, the actual timeout has increased to 2minutes!
6. If a sidebar view has focus, but sidebar is collapsed, then find action
   should activate playqueue search widget.

1.3.0.1
-------
1. Fix duplicate translations - causes KDE builds to fail.

1.3.0
-----
 1. Add option to control startup-state; visible, hidden, or remembered from
    previous run.
 2. Basic undo/redo support for playqueue.
 3. Search tab. Hidden by default, enable via settings dialog.
 4. Optionally save scaled covers (used in artist and albums views) to disk.
 5. Add option to always collapse context into single pane.
 6. Option to have small sidebar at top or bottom.
 7. Scale context view backdrops.
 8. Add a manual config item (mpdPoll) to control whether Cantata should poll
    MPD for its current state whilst playing. The value is specified in
    seconds. This is useful for cases where Cantata misses updates from MPD.
    This is only a work-around for certain scenarios. Please see README for
    more details.
 9. When sending commands to MPD, and waiting for response, use a timeout of 2
    seconds per 100K bytes of data.
10. Hide volume control if MPD returns a negative value for volume - which