@@ -91,24 +91,7 @@
       <item row="0" column="6">
        <layout class="QVBoxLayout" name="middleLayout">
         <item>
-         <widget class="SqueezedTextLabel" name="trackLabel">
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-          <property name="font">
-           <font>
-            <weight>75</weight>
-            <bold>true</bold>
-           </font>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="SqueezedTextLabel" name="artistLabel">
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
+         <widget class="SongLabel" name="trackLabel"/>
         </item>
         <item>
          <widget class="TimeSlider" name="positionSlider">
@@ -415,6 +398,11 @@
    <class>SqueezedTextLabel</class>
    <extends>QLabel</extends>
    <header>squeezedtextlabel.h</header>
+  </customwidget>
+  <customwidget>
+   <class>SongLabel</class>
+   <extends>QLabel</extends>
+   <header>songlabel.h</header>
   </customwidget>
   <customwidget>
    <class>PlayQueueView</class>
