@@ -549,6 +549,25 @@ QString Song::basicArtist() const
     return artist;
 }
 
+QString Song::describe(bool withMarkup) const
+{
+    QString albumText=album.isEmpty() ? name : album;
+    if (!album.isEmpty()) {
+        quint16 y=Song::albumYear(*this);
+        if (y>0) {
+            albumText+=QString(" (%1)").arg(y);
+        }
+    }
+
+    return withMarkup
+            ?   artist.isEmpty()
+                ?  i18nc("Song on Album", "<b>%1</b> on <b>%2</b>", title, albumText)
+                :  i18nc("Song by Artist on Album", "<b>%1</b> by <b>%2</b> on <b>%3</b>", title, artist, albumText)
+            : artist.isEmpty()
+                ?  i18nc("Song on Album", "%1 on %2", title, album)
+                :  i18nc("Song by Artist on Album", "%1 by %2 on %3", title, artist, albumText);
+}
+
 bool Song::isFromOnlineService() const
 {
     return constOnlineDiscId==disc && (isCantataStream() || file.startsWith("http://")) && albumartist==album;
