@@ -128,6 +128,7 @@ struct Song
     bool isCueFile() const { return Playlist==type && file.endsWith(QLatin1String(".cue"), Qt::CaseInsensitive); }
     QString basicArtist() const;
     QString filePath() const { return decodePath(file); }
+    QString describe(bool withMarkup=false) const;
 
     // We pass 'Song' around to cover requester. When we want the artist image, and not album image,
     // then we blank certain fields to indicate this!
