@@ -12,6 +12,7 @@
  9. If volume control is disabled (as MPD returns negative volume), then make
     control semi-transparent, and don't just hide.
 10. Use system libebur128 if found.
+11. Use single line to show current song details.
 
 1.3.1
 -----
